Add randomised weapon generator

--- a/index.html
+++ b/index.html
@@ -19,10 +19,20 @@
     </form>
     <p id="outcome"></p>
 
-<script>
+<!-- <script>
+    function rockButton() {
+        console.log('rock');
+        return 'rock';
+    }
+    function paperButton() {
+        console.log('paper');
+        return 'paper';
+    }
+    function scissorsButton() {
+        console.log('scissors');
+        return 'scissors';
+    }
 
-
-</script>
-
+</script> -->
     </body>
 </html>
