--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <title>Rock, paper, scissors!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
-    <script src="script.js"></script>
 
 </head>
 <body>
     <h1>Rock, paper, scissors!</h1>
     <form class="container">
-        <button type="button" id="rock" value="true" onclick="rockButton()"><i class="far fa-hand-rock"></i></button>
-        <button type="button" id="paper" value="true" onclick="paperButton()"><i class="far fa-hand-paper"></i></button>
-        <button type="button" id="scissors" value="true" onclick="scissorsButton()"><i class="far fa-hand-scissors"></i></button>
+        <button type="button" class="btn" id="rock" value="true" onclick="rockButton()"><i class="far fa-hand-rock"></i></button>
+        <button type="button" class="btn" id="paper" value="true" onclick="paperButton()"><i class="far fa-hand-paper"></i></button>
+        <button type="button" class="btn" id="scissors" value="true" onclick="scissorsButton()"><i class="far fa-hand-scissors"></i></button>
         <input type="submit" id="run" value="Play!">
     </form>
     <p id="outcome"></p>
@@ -34,5 +33,6 @@
     }
 
 </script> -->
+<script src="script.js"></script>
     </body>
 </html>
